--- a/RPS_Game/app/build.gradle
+++ b/RPS_Game/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.amitshekhar.tflite"
+        applicationId "com.RPS_Game.tflite"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
@@ -25,11 +25,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.wonderkiln:camerakit:0.13.1'
     implementation 'org.tensorflow:tensorflow-lite:+'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:design:27.1.1"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.android.support:recyclerview-v7:27.0.0'
 }
